# nbwavedrom

./: .gitignore  LICENSE  README.md  example.ipynb  fetch_wavedrom.sh  pyproject.toml  setup.py  wavedrom.py
examples/: example.ipynb
nbwavedrom/: __init__.py
